@@ -10,7 +10,9 @@ software-store (0.3.4) UNRELEASED; urgency=low
   * softwarestore/db/update.py:
     - fix i18n reading from the app-install-data files
     - add X-Ubuntu-Gettext-Domain support
-
+  * softwarestore/view/appdetailsview.py
+    - extend show_app() to take (appname, pkgname)
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Sep 2009 12:28:13 +0200
 
 software-store (0.3.3) karmic; urgency=low
